# tpDcc-tools-datalibrary

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
tests/: test_general.py
tpDcc/tools/datalibrary/: __init__.py  __logging__.ini  __version__.py  _version.py
tpDcc/tools/datalibrary/core/: client.py  consts.py  dataitem.py  datalibrary.py  factory.py  settings.py  tool.py  toolset.py  utils.py
tpDcc/tools/datalibrary/core/views/: dataitem.py  item.py
tpDcc/tools/datalibrary/data/: base.py  folder.py  group.py  image.py
tpDcc/tools/datalibrary/dccs/max/: server.py
tpDcc/tools/datalibrary/dccs/maya/: server.py
tpDcc/tools/datalibrary/dccs/maya/core/: factory.py
tpDcc/tools/datalibrary/dccs/maya/data/: dataitem.py
tpDcc/tools/datalibrary/dccs/maya/menus/: sets.py
tpDcc/tools/datalibrary/dccs/maya/widgets/: load.py  save.py
tpDcc/tools/datalibrary/items/: folder.py
tpDcc/tools/datalibrary/widgets/: export.py  listview.py  load.py  mixinview.py  preview.py  save.py  search.py  sequence.py  settings.py  sidebar.py  status.py  treeview.py  version.py  viewer.py  window.py
tpDcc/tools/datalibrary/widgets/menus/: filter.py  group.py  libraries.py  sort.py
